--- a/index.html
+++ b/index.html
@@ -4,7 +4,7 @@
     <meta charset="UTF-8">
     <meta http-equiv="X-UA-Compatible" content="IE=edge">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
-    <title>Home | Michael Rothkopf</title>
+    <title>Michael Rothkopf</title>
     <link rel="stylesheet" href="css/global-v0.css">
     <link rel="stylesheet" href="css/index-v0.css">
     <style>
