--- a/quizmaker/index.html
+++ b/quizmaker/index.html
@@ -4,7 +4,7 @@
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <title>Quiz Maker</title>
-    <link rel="stylesheet" href="quiz.css">
+    <link rel="stylesheet" href="quiz-v1.css">
   </head>
   <body>
     <div class="information">
