updated quiz maker and systematic changes to css

--- a/quizmaker/editor.html
+++ b/quizmaker/editor.html
@@ -2,21 +2,16 @@
 <html lang="en">
   <head>
     <meta charset="UTF-8">
-    <meta http-equiv="X-UA-Compatible" content="IE=edge">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
-    <title>Projects | Michael Rothkopf</title>
+    <title>Michael Rothkopf's Quiz Maker</title>
     <link rel="stylesheet" href="/css/global-v1.css">
     <link rel="stylesheet" href="/css/nav-v1.css">
-    <link rel="stylesheet" href="css/under_construction-v1.css">
-    <style>
-      /* Fixes blue flash on nav links when loading page */
-      a {color: white;}
-    </style>
+    <link rel="stylesheet" href="/css/under_construction-v1.css">
   </head>
   <body>
     <nav class="nav-main">
       <div class="nav-main__persistent">
-        <a class="nav-main__brand" href="/">Michael Rothkopf</a>
+        <a class="nav-main__brand" href="/quizmaker">Michael Rothkopf&apos;s Quiz Maker</a>
         <div class="nav-main__persistent-spacing"></div>
         <div class="nav-toggle" id="nav-toggle">
           <div class="nav-toggle__bar nav-toggle__bar--top"></div>
@@ -26,8 +21,8 @@
       </div>
       <div class="nav-main__spacing"></div>
       <div class="nav-main__collapsible nav-main__collapsible--collapsed" id="nav-main__collapsible">
-        <a href="projects" class="nav-main__link">My Projects</a>
-        <a href="contact" class="nav-main__link">Contact Me</a>
+        <a href="editor" class="nav-main__link">Editor</a>
+        <!-- <a href="contact" class="nav-main__link">About</a> -->
       </div>
     </nav>
     <div class="main-content">
@@ -35,6 +30,7 @@
         <h1 class="main-content__title">I&apos;m still working on this section. Check again soon!</h1>
       </div>
     </div>
-    <script src="js/nav.js"></script>
+    <script src="/js/nav.js"></script>
+    <script src="js/player.js" type="module"></script>
   </body>
 </html>
