--- a/template.html
+++ b/template.html
@@ -5,7 +5,8 @@
     <meta http-equiv="X-UA-Compatible" content="IE=edge">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <title>TE | Michael Rothkopf</title>
-    <link rel="stylesheet" href="css/global-v0.css">
+    <link rel="stylesheet" href="/css/global-v1.css">
+    <link rel="stylesheet" href="/css/nav-v1.css">
     <style>
       /* Fixes blue flash on nav links when loading page */
       a {color: white;}
