--- a/contact.html
+++ b/contact.html
@@ -5,8 +5,9 @@
     <meta http-equiv="X-UA-Compatible" content="IE=edge">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <title>Contact Me | Michael Rothkopf</title>
-    <link rel="stylesheet" href="css/global-v0.css">
-    <link rel="stylesheet" href="css/contact-v0.css">
+    <link rel="stylesheet" href="/css/global-v1.css">
+    <link rel="stylesheet" href="/css/nav-v1.css">
+    <link rel="stylesheet" href="css/contact-v1.css">
     <style>
       /* Fixes blue flash on nav links when loading page */
       a {color: white;}
