--- a/quizmaker/index.html
+++ b/quizmaker/index.html
@@ -3,26 +3,51 @@
   <head>
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
-    <title>Quiz Maker</title>
-    <link rel="stylesheet" href="quiz-v1.css">
+    <title>Michael Rothkopf's Quiz Maker</title>
+    <link rel="stylesheet" href="/css/global-v1.css">
+    <link rel="stylesheet" href="/css/nav-v1.css">
+    <link rel="stylesheet" href="/quizmaker/css/quiz-v1.css">
   </head>
   <body>
-    <div class="information">
-      <h1>Michael Rothkopf&apos;s Quiz Maker</h1>
-      <p>The rest of these things make you pay, so here&apos;s a free one. Enjoy. I&apos;m working on an editor. This should only be used for self-study.</p>
-    </div>
-    <div id="quiz">
-      <div id="quiz-data-box-container">
-        <textarea name="quiz-data-box" id="quiz-data-box" cols="200" rows="10"></textarea>
-        <button id="quiz-begin">Start Quiz</button>
-      </div>
-      <div id="quiz-question-container">
-        <div id="quiz-question">
-
+    <nav class="nav-main">
+      <div class="nav-main__persistent">
+        <a class="nav-main__brand" href="/quizmaker">Michael Rothkopf&apos;s Quiz Maker</a>
+        <div class="nav-main__persistent-spacing"></div>
+        <div class="nav-toggle" id="nav-toggle">
+          <div class="nav-toggle__bar nav-toggle__bar--top"></div>
+          <div class="nav-toggle__bar nav-toggle__bar--mid"></div>
+          <div class="nav-toggle__bar nav-toggle__bar--bot"></div>
         </div>
-        <button id="quiz-advance">Check</button>
+      </div>
+      <div class="nav-main__spacing"></div>
+      <div class="nav-main__collapsible nav-main__collapsible--collapsed" id="nav-main__collapsible">
+        <a href="editor" class="nav-main__link">Editor</a>
+        <!-- <a href="contact" class="nav-main__link">About</a> -->
+      </div>
+    </nav>
+    <div id="quiz">
+      <div id="quiz-instructions-container">
+        <h3>Michael Rothkopf&apos;s Quiz Maker</h3>
+        <p>Most of the other quiz makers I have found charge money for something that I could make in 2 hours, so here we are. Copy and paste your quiz data into the next screen.</p>
+        <button id="quiz-instructions-continue">Continue</button>
+      </div>
+      <div id="quiz-data-box-container" class="quiz-subcontainer quiz-hidden">
+        <h3>Paste the quiz data here.</h3>
+        <textarea name="quiz-data-box" id="quiz-data-box" cols="120" rows="10"></textarea>
+        <button id="quiz-start">Start Quiz</button>
+      </div>
+      <div id="quiz-question-container" class="quiz-subcontainer quiz-hidden">
+        <h2 id="quiz-question-prompt">Question loading...</h2>
+        <div id="quiz-question-input-container" class="quiz-subcontainer">
+        </div>
+        <button id="quiz-question-advance">Check</button>
+      </div>
+      <div id="quiz-results-container" class="quiz-subcontainer quiz-hidden">
+        <h3 id="quiz-results-title">Congratulations&excl;</h3>
+        <p id="quiz-results-description"></p>
       </div>
     </div>
-    <script src="quiz.js"></script>
+    <script src="/js/nav.js"></script>
+    <script src="js/player.js" type="module"></script>
   </body>
 </html>
