--- a/autoemail/index.html
+++ b/autoemail/index.html
@@ -11,7 +11,7 @@
   <body>
     <nav class="nav-main">
       <div class="nav-main__persistent">
-        <a class="nav-main__brand" href="/quizmaker">Michael Rothkopf&apos;s Automatic Email Generator</a>
+        <a class="nav-main__brand" href="/autoemail">Michael Rothkopf&apos;s Automatic Email Generator</a>
         <div class="nav-main__persistent-spacing"></div>
         <div class="nav-toggle" id="nav-toggle">
           <div class="nav-toggle__bar nav-toggle__bar--top"></div>
