--- a/quizmaker/editor.html
+++ b/quizmaker/editor.html
@@ -11,7 +11,7 @@
   <body>
     <nav class="nav-main">
       <div class="nav-main__persistent">
-        <a class="nav-main__brand" href="/quizmaker">Michael Rothkopf&apos;s Quiz Maker</a>
+        <a class="nav-main__brand" href="/quizmaker">Editor Beta | Michael Rothkopf&apos;s Quiz Maker</a>
         <div class="nav-main__persistent-spacing"></div>
         <div class="nav-toggle" id="nav-toggle">
           <div class="nav-toggle__bar nav-toggle__bar--top"></div>
@@ -53,7 +53,7 @@
 
           <div class="editor-subcontainer-element">
             <input type="checkbox" name="quiz-settings-randomize-questions" id="quiz-settings-randomize-questions">
-            <label for="quiz-settings-randomize-questions">Randomize questions</label>
+            <label for="quiz-settings-randomize-questions">Randomize question order</label>
           </div>
 
           <div class="editor-subcontainer-element">
