--- a/quizmaker/editor.html
+++ b/quizmaker/editor.html
@@ -3,7 +3,7 @@
   <head>
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
-    <title>Michael Rothkopf's Quiz Maker</title>
+    <title>Editor Beta | Michael Rothkopf's Quiz Maker</title>
     <link rel="stylesheet" href="/css/global-v1.css">
     <link rel="stylesheet" href="/css/nav-v1.css">
     <link rel="stylesheet" href="/quizmaker/css/editor-v1.css">
@@ -11,7 +11,7 @@
   <body>
     <nav class="nav-main">
       <div class="nav-main__persistent">
-        <a class="nav-main__brand" href="/quizmaker">Editor Beta | Michael Rothkopf&apos;s Quiz Maker</a>
+        <a class="nav-main__brand" href="/quizmaker">Michael Rothkopf&apos;s Quiz Maker</a>
         <div class="nav-main__persistent-spacing"></div>
         <div class="nav-toggle" id="nav-toggle">
           <div class="nav-toggle__bar nav-toggle__bar--top"></div>
