--- a/quizmaker/index.html
+++ b/quizmaker/index.html
@@ -48,6 +48,6 @@
       </div>
     </div>
     <script src="/js/nav.js"></script>
-    <script src="js/player.js" type="module"></script>
+    <script src="js/player0.js" type="module"></script>
   </body>
 </html>
