updates to quiz maker

--- a/quizmaker/editor.html
+++ b/quizmaker/editor.html
@@ -83,7 +83,7 @@
           <table class="editor-subcontainer-element editor-hidden" id="question-options-table">
             <tr>
               <!-- <th>Answer</th> -->
-              <th class="question-options-table-text">Text</th>
+              <th class="question-options-table-text">Distractors</th>
               <th><button id="add-distractor-button">+</button></th>
             </tr>
             <!-- <tr>
