added preliminary project page code

--- a/index.html
+++ b/index.html
@@ -38,8 +38,8 @@
       </div>
       <div class="landing-content__spacing"></div>
       <div class="landing-content__links">
-        <a href="projects" class="landing-content__link">My Projects</a>
-        <a href="contact" class="landing-content__link">Contact Me</a>
+        <a href="projects" class="button landing-content__link">My Projects</a>
+        <a href="contact" class="button landing-content__link">Contact Me</a>
       </div>
       <div class="landing-content__spacing landing-content__spacing--small"></div>
     </div>
