--- a/under_construction.html
+++ b/under_construction.html
@@ -4,9 +4,10 @@
     <meta charset="UTF-8">
     <meta http-equiv="X-UA-Compatible" content="IE=edge">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
-    <title>Template | Michael Rothkopf</title>
+    <title>Under Construction | Michael Rothkopf</title>
     <link rel="stylesheet" href="/css/global-v1.css">
     <link rel="stylesheet" href="/css/nav-v1.css">
+    <link rel="stylesheet" href="css/under_construction-v1.css">
     <style>
       /* Fixes blue flash on nav links when loading page */
       a {color: white;}
@@ -30,7 +31,9 @@
       </div>
     </nav>
     <div class="main-content">
-      
+      <div class="main-content__notice">
+        <h1 class="main-content__title">I&apos;m still working on this section. Check again soon!</h1>
+      </div>
     </div>
     <script src="js/nav.js"></script>
   </body>
