--- a/indev/openingtrainer/index.html
+++ b/indev/openingtrainer/index.html
@@ -2,20 +2,15 @@
 <html lang="en">
   <head>
     <meta charset="UTF-8">
-    <meta http-equiv="X-UA-Compatible" content="IE=edge">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
-    <title>Template | Michael Rothkopf</title>
+    <title>Michael Rothkopf's Opening Trainer</title>
     <link rel="stylesheet" href="/css/global-v1.css">
     <link rel="stylesheet" href="/css/nav-v1.css">
-    <style>
-      /* Fixes blue flash on nav links when loading page */
-      a {color: white;}
-    </style>
   </head>
   <body>
     <nav class="nav-main">
       <div class="nav-main__persistent">
-        <a class="nav-main__brand" href="/">Michael Rothkopf</a>
+        <a class="nav-main__brand" href="/openingtrainer">Michael Rothkopf&apos;s Opening Trainer</a>
         <div class="nav-main__persistent-spacing"></div>
         <div class="nav-toggle" id="nav-toggle">
           <div class="nav-toggle__bar nav-toggle__bar--top"></div>
@@ -25,13 +20,15 @@
       </div>
       <div class="nav-main__spacing"></div>
       <div class="nav-main__collapsible nav-main__collapsible--collapsed" id="nav-main__collapsible">
-        <a href="projects" class="nav-main__link">My Projects</a>
-        <a href="contact" class="nav-main__link">Contact Me</a>
+        <!-- <a href="editor" class="nav-main__link">Editor</a> -->
+        <!-- <a href="contact" class="nav-main__link">About</a> -->
       </div>
     </nav>
     <div class="main-content">
-      
+      <div id="chessBoard" style="width: 800px;"></div>
     </div>
-    <script src="js/nav.js"></script>
+    <script src="/js/nav.js"></script>
+    <script src="js/chessboard-1.0.0.min.js"></script>
+    <script src="js/openings.js"></script>
   </body>
 </html>
