--- a/projects.html
+++ b/projects.html
@@ -7,7 +7,7 @@
     <title>Projects | Michael Rothkopf</title>
     <link rel="stylesheet" href="/css/global-v1.css">
     <link rel="stylesheet" href="/css/nav-v1.css">
-    <link rel="stylesheet" href="css/under_construction-v1.css">
+    <link rel="stylesheet" href="/css/projects-v1.css">
     <style>
       /* Fixes blue flash on nav links when loading page */
       a {color: white;}
@@ -31,8 +31,34 @@
       </div>
     </nav>
     <div class="main-content">
-      <div class="main-content__notice">
-        <h1 class="main-content__title">I&apos;m still working on this section. Check again soon!</h1>
+      <div class="project-row">
+        <div class="project-card">
+          <h3>Rothkopf Online Games</h3>
+          <p>This platform hosts live multiplayer  games built on TypeScript and Socket.IO. On the front-end, it uses React, Vite, and pure HTML5 Canvas. In the future, I'd like to add more games and chat features to the app.</p>
+          <div class="project-card__controls">
+            <a href="/projects/rothkopf-online-games" class="button">About</a>
+            <a href="https://github.com/michaelrothkopf" class="button">Source Code</a>
+            <a href="https://rog.michaelrothkopf.com" class="button">See It Live</a>
+          </div>
+        </div>
+        <div class="project-card">
+          <h3>Rothkopf Online Games</h3>
+          <p>This platform hosts live multiplayer  games built on TypeScript and Socket.IO. On the front-end, it uses React, Vite, and pure HTML5 Canvas. In the future, I'd like to add more games and chat features to the app.</p>
+          <div class="project-card__controls">
+            <a href="/projects/rothkopf-online-games" class="button">About</a>
+            <a href="https://github.com/michaelrothkopf" class="button">Source Code</a>
+            <a href="https://rog.michaelrothkopf.com" class="button">See It Live</a>
+          </div>
+        </div>
+        <div class="project-card">
+          <h3>Rothkopf Online Games</h3>
+          <p>This platform hosts live multiplayer  games built on TypeScript and Socket.IO. On the front-end, it uses React, Vite, and pure HTML5 Canvas. In the future, I'd like to add more games and chat features to the app.</p>
+          <div class="project-card__controls">
+            <a href="/projects/rothkopf-online-games" class="button">About</a>
+            <a href="https://github.com/michaelrothkopf" class="button">Source Code</a>
+            <a href="https://rog.michaelrothkopf.com" class="button">See It Live</a>
+          </div>
+        </div>
       </div>
     </div>
     <script src="js/nav.js"></script>
