--- a/projects.html
+++ b/projects.html
@@ -51,12 +51,12 @@
           </div>
         </div>
         <div class="project-card">
-          <h3>Rothkopf Online Games</h3>
-          <p>This platform hosts live multiplayer  games built on TypeScript and Socket.IO. On the front-end, it uses React, Vite, and pure HTML5 Canvas. In the future, I'd like to add more games and chat features to the app.</p>
+          <h3>Quiz Maker</h3>
+          <p>This simple tool allows users to make custom quizzes for studying. Written in HTML, CSS, and JS, it also contains an editor and Base64 encryptor so you don't accidentally look at the answers.</p>
           <div class="project-card__controls">
             <a href="/projects/rothkopf-online-games" class="button">About</a>
-            <a href="https://github.com/michaelrothkopf" class="button">Source Code</a>
-            <a href="https://rog.michaelrothkopf.com" class="button">See It Live</a>
+            <a href="https://github.com/michaelrothkopf/michaelrothkopfcom/tree/master/quizmaker" class="button">Source Code</a>
+            <a href="https://michaelrothkopf.com/quizmaker" class="button">See It Live</a>
           </div>
         </div>
       </div>
