--- a/indev/openingtrainer/index.html
+++ b/indev/openingtrainer/index.html
@@ -6,6 +6,11 @@
     <title>Michael Rothkopf's Opening Trainer</title>
     <link rel="stylesheet" href="/css/global-v1.css">
     <link rel="stylesheet" href="/css/nav-v2.css">
+    <link rel="stylesheet"
+      href="https://unpkg.com/@chrisoakman/chessboardjs@1.0.0/dist/chessboard-1.0.0.min.css"
+      integrity="sha384-q94+BZtLrkL1/ohfjR8c6L+A6qzNH9R2hBLwyoAfu3i/WCvQjzL2RQJ3uNHDISdU"
+      crossorigin="anonymous">
+    <link rel="stylesheet" href="opening_trainer-v1.css">
   </head>
   <body>
     <nav class="nav-main">
@@ -25,10 +30,28 @@
       </div>
     </nav>
     <div class="main-content">
-      <div id="chessBoard" style="width: 800px;"></div>
+      <div class="main-content__controls">
+        <h3>Openings</h3>
+        <h5>Pick an opening</h5>
+        <select class="select" name="opening-picker" id="openingPicker">
+          <option value="QGD">Queen's Gambit Declined</option>
+        </select>
+        <h5>Pick a variation</h5>
+        <select class="select" name="variation-picker" id="variationPicker">
+          <option value="QGD">Queen's Gambit Declined</option>
+        </select>
+      </div>
+      <div id="chessBoard" style="width: 750px"></div>
     </div>
     <script src="/js/nav.js"></script>
-    <script src="js/chessboard-1.0.0.min.js"></script>
-    <script src="js/openings.js"></script>
+    <script src="https://code.jquery.com/jquery-3.5.1.min.js"
+      integrity="sha384-ZvpUoO/+PpLXR1lu4jmpXWu80pZlYUAfxl5NsBMWOEPSjUn/6Z/hRTt8+pR6L4N2"
+      crossorigin="anonymous"></script>
+
+    <script src="https://unpkg.com/@chrisoakman/chessboardjs@1.0.0/dist/chessboard-1.0.0.min.js"
+      integrity="sha384-8Vi8VHwn3vjQ9eUHUxex3JSN/NFqUg3QbPyX8kWyb93+8AC/pPWTzj+nHtbC5bxD"
+      crossorigin="anonymous"></script>
+    <script type="module" src="js/openings.js"></script>
+    <script type="module" src="js/trainer.js"></script>
   </body>
 </html>
