--- a/projects.html
+++ b/projects.html
@@ -49,7 +49,7 @@
         </div>
         <div class="project-card">
           <h3>Quiz Maker</h3>
-          <p>This simple tool allows users to make custom quizzes for studying. Written in HTML, CSS, and JS, it also contains an editor and Base64 encryptor so you don't accidentally look at the answers.</p>
+          <p>This simple tool allows users to make custom quizzes for studying. Written in HTML, CSS, and JS, it also contains an editor and Base64 encryptor so users don't accidentally look at the answers.</p>
           <div class="project-card__controls">
             <a href="https://github.com/michaelrothkopf/michaelrothkopfcom/tree/master/quizmaker" class="button" target="_blank">Source Code</a>
             <a href="https://michaelrothkopf.com/quizmaker" class="button" target="_blank">See It Live</a>
