algorithm visualizers and voyage

--- a/projects.html
+++ b/projects.html
@@ -56,6 +56,30 @@
           </div>
         </div>
       </div>
+      <div class="project-row">
+        <div class="project-card">
+          <h3>Chat App</h3>
+          <p>This chat app was designed with operation security in mind. It's password-protected with multiple layers of encryption and secure requests. It's also invite-only, making it perfect for intraorganizational communication.</p>
+          <div class="project-card__controls">
+            <a href="https://github.com/michaelrothkopf/chatapp-server" class="button" target="_blank">Source Code</a>
+          </div>
+        </div>
+        <div class="project-card">
+          <h3>Voyage</h3>
+          <p>My first mobile application, Voyage is a hall pass system intended as a proof-of-concept for school use. The teacher, student, and administrator  apps cooperate to create and validate hall passes. I created this app as an introduction to developing for phones and integrating multiple types of accounts and interfaces.</p>
+          <div class="project-card__controls">
+            <a href="https://github.com/michaelrothkopf/voyage" class="button" target="_blank">Source Code</a>
+          </div>
+        </div>
+        <div class="project-card">
+          <h3>Algorithm Visualizer</h3>
+          <p>This HTML5 Canvas site animates basic algorithms so users can understand the process behind them. I made this while learning algorithms and recently added it to my website.</p>
+          <div class="project-card__controls">
+            <a href="https://github.com/michaelrothkopf/michaelrothkopfcom/tree/master/algorithmvisualizers" class="button" target="_blank">Source Code</a>
+            <a href="https://michaelrothkopf.com/algorithmvisualizers" class="button" target="_blank">See It Live</a>
+          </div>
+        </div>
+      </div>
     </div>
     <script src="js/nav.js"></script>
   </body>
