--- a/algorithmvisualizers/selectionsort.html
+++ b/algorithmvisualizers/selectionsort.html
@@ -7,7 +7,7 @@
     <title>Selection Sort | Algorithm Visualizers</title>
     <link rel="stylesheet" href="/css/global-v1.css">
     <link rel="stylesheet" href="/css/nav-v2.css">
-    <link rel="stylesheet" href="css/algorithmvisualizers-v1.css">
+    <link rel="stylesheet" href="css/algorithm-v1.css">
     <style>
       /* Fixes blue flash on nav links when loading page */
       a {color: white;}
