--- a/algorithmvisualizers/index.html
+++ b/algorithmvisualizers/index.html
@@ -60,6 +60,6 @@
         </div>
       </div>
     </div>
-    <script src="js/nav.js"></script>
+    <script src="/js/nav.js"></script>
   </body>
 </html>
