fixed algorithm visualizer link

--- a/algorithmvisualizers/index.html
+++ b/algorithmvisualizers/index.html
@@ -16,7 +16,7 @@
   <body>
     <nav class="nav-main">
       <div class="nav-main__persistent">
-        <a class="nav-main__brand" href="">Algorithm Visualizers</a>
+        <a class="nav-main__brand" href="/algorithmvisualizers">Algorithm Visualizers</a>
         <div class="nav-main__persistent-spacing"></div>
         <div class="nav-toggle" id="nav-toggle">
           <div class="nav-toggle__bar nav-toggle__bar--top"></div>
