not all projects open in new window, switched some targets from _blank

--- a/projects.html
+++ b/projects.html
@@ -52,7 +52,7 @@
           <p>This simple tool allows users to make custom quizzes for studying. Written in HTML, CSS, and JS, it also contains an editor and Base64 encryptor so users don't accidentally look at the answers.</p>
           <div class="project-card__controls">
             <a href="https://github.com/michaelrothkopf/michaelrothkopfcom/tree/master/quizmaker" class="button" target="_blank">Source Code</a>
-            <a href="https://michaelrothkopf.com/quizmaker" class="button" target="_blank">See It Live</a>
+            <a href="https://michaelrothkopf.com/quizmaker" class="button">See It Live</a>
           </div>
         </div>
       </div>
@@ -76,7 +76,7 @@
           <p>This HTML5 Canvas site animates basic algorithms so users can understand the process behind them. I made this while learning algorithms and recently added it to my website.</p>
           <div class="project-card__controls">
             <a href="https://github.com/michaelrothkopf/michaelrothkopfcom/tree/master/algorithmvisualizers" class="button" target="_blank">Source Code</a>
-            <a href="https://michaelrothkopf.com/algorithmvisualizers" class="button" target="_blank">See It Live</a>
+            <a href="https://michaelrothkopf.com/algorithmvisualizers" class="button">See It Live</a>
           </div>
         </div>
       </div>
