fixed input validation, styling in algorithmvisualizers

--- a/algorithmvisualizers/about-collatz.html
+++ b/algorithmvisualizers/about-collatz.html
@@ -42,7 +42,7 @@
       <p>The visualization renders bars until $f(n)$ reaches $1$. You can see in slow motion how a sequence jumps around before eventually falling to zero.</p>
       <p>Note that due to limitations of the canvas, some long sequences may not render correctly.</p>
       <h2>Interesting Sequences</h2>
-      <p>Some sequences have interesting results due to the properties of the function. Try some of the following:</p>
+      <p>Some sequences have interesting results due to the properties of the function. Try starting with some of the following:</p>
       <ul>
         <li>Powers of 2</li>
         <li>Prime numbers</li>
@@ -50,6 +50,10 @@
         <li>Doubling your previous input</li>
         <li>Odd vs. even starting numbers</li>
       </ul>
+      <h2>Instructions</h2>
+      <p>The box labeled "Starting value" sets the starting point for the conjecture, i.e. the first number in the Collatz sequence.</p>
+      <p>Enter a value you wish to visualize and click "See it!" to begin the animation.</p>
+      <p>Use the speed slider to control how fast the animation moves.</p>
       <div class="action-container">
         <a href="collatz" class="button">Try it out!</a>
       </div>
