--- a/algorithmvisualizers/about-selectionsort.html
+++ b/algorithmvisualizers/about-selectionsort.html
@@ -45,6 +45,11 @@
       <p>I used HTML5 Canvas to render the visualization. Each bar's height represents the magnitude of its value in the array.</p>
       <p>The visual shows each step with a small delay so users can see what's really happening, and the bar that is currently moving is highlighted.</p>
       <p>The red bar represents the working element, the blue the element that's currently being compared, and the yellow the element the algorithm currently thinks is smallest.</p>
+      <h2>Instructions</h2>
+      <p>The box labeled "Number of elements" determines how many numbers the array to be sorted will contain.</p>
+      <p>The array will be filled with values from 1 to the number you enter in the box, then shuffled so that it can be resorted.</p>
+      <p>Enter a value you wish to visualize and click "See it!" to begin the animation.</p>
+      <p>Use the speed slider to control how fast the animation moves.</p>
       <div class="action-container">
         <a href="selectionsort.html" class="button">Try it out!</a>
       </div>
