--- a/algorithmvisualizers/selectionsort.html
+++ b/algorithmvisualizers/selectionsort.html
@@ -32,7 +32,7 @@
     <div class="main-content">
       <h1>Selection Sort</h1>
       <div class="controls">
-        <input class="text-input" type="text" name="max-value" id="maxValue" placeholder="Max value">
+        <input class="input" type="text" name="max-value" id="maxValue" placeholder="Number of elements">
         <button class="button" id="setMaxValue">See it!</button>
         <br>
         <input type="range" name="speed" id="speed" min="1" max="100" value="25">
