--- a/algorithmvisualizers/collatz.html
+++ b/algorithmvisualizers/collatz.html
@@ -32,7 +32,7 @@
     <div class="main-content">
       <h1>The Collatz Conjecture</h1>
       <div class="controls">
-        <input class="text-input" type="text" name="starting-value" id="startingValue" placeholder="Starting value">
+        <input class="input" type="text" name="starting-value" id="startingValue" placeholder="Starting value">
         <button class="button" id="setStartingValue">See it!</button>
         <br>
         <input type="range" name="speed" id="speed" min="1" max="15" value="7">
